--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,15 +17,8 @@ img {
   object-fit: cover;
 }
 
-.search-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
-  margin-top: 32px;
-  justify-content: center;
-}
-
 .card {
+  height: 360px;
   display: flex;
   width: calc((100% - 2 * 24px) / 3);
   flex-direction: column;
@@ -38,7 +31,14 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  flex-shrink: 2;
+}
+
+.search-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  margin-top: 32px;
+  justify-content: center;
 }
 
 .info_item {
@@ -67,6 +67,20 @@ img {
 }
 
 .btn {
+  width: 91px;
+  height: 40px;
+
+  border: none;
+  color: #fff;
+  background-color: #4e75ff;
+  border-radius: 8px 8px 8px 8px;
+  padding: 8px 16px;
+  cursor: pointer;
+}
+
+.load-more-btn {
+  display: none;
+
   width: 91px;
   height: 40px;
 
